crates/query-engine/translation/tests/snapshots/tests__sorting_by_nested_relationship_column_with_predicate.snap
---
source: crates/query-engine/translation/tests/tests.rs
expression: result
---
SET
  TRANSACTION ISOLATION LEVEL READ COMMITTED;

SET
  TRANSACTION READ ONLY;

SELECT
  coalesce(json_agg(row_to_json("%4_universe")), '[]') AS "universe"
FROM
  (
    SELECT
      *
    FROM
      (
        SELECT
          coalesce(json_agg(row_to_json("%5_rows")), '[]') AS "rows"
        FROM
          (
            SELECT
              "%0_track"."Name" AS "Name"
            FROM
              "public"."Track" AS "%0_track"
              LEFT OUTER JOIN LATERAL (
                SELECT
                  "%2_ORDER_PART_artist"."Name" AS "Name"
                FROM
                  (
                    SELECT
                      "%1_ORDER_PART_album"."ArtistId" AS "ArtistId"
                    FROM
                      "public"."Album" AS "%1_ORDER_PART_album"
                    WHERE
                      (
                        (
                          "%0_track"."AlbumId" = "%1_ORDER_PART_album"."AlbumId"
                        )
                        AND (
                          "%1_ORDER_PART_album"."Title" = cast($1 as varchar)
                        )
                      )
                  ) AS "%1_ORDER_PART_album"
                  LEFT OUTER JOIN LATERAL (
                    SELECT
                      "%2_ORDER_PART_artist"."Name" AS "Name"
                    FROM
                      "public"."Artist" AS "%2_ORDER_PART_artist"
                    WHERE
                      (
                        "%1_ORDER_PART_album"."ArtistId" = "%2_ORDER_PART_artist"."ArtistId"
                      )
                  ) AS "%2_ORDER_PART_artist" ON ('true')
              ) AS "%3_ORDER_FOR_track" ON ('true')
            ORDER BY
              "%3_ORDER_FOR_track"."Name" ASC
            LIMIT
              3
          ) AS "%5_rows"
      ) AS "%5_rows"
  ) AS "%4_universe";

{
    1: String(
        "Blizzard of Ozz",
    ),
}
