crates/query-engine/translation/tests/snapshots/tests__sorting_by_nested_relationship_count.snap
---
source: crates/query-engine/translation/tests/tests.rs
expression: result
---
SET
  TRANSACTION ISOLATION LEVEL READ COMMITTED;

SET
  TRANSACTION READ ONLY;

SELECT
  coalesce(json_agg(row_to_json("%3_universe")), '[]') AS "universe"
FROM
  (
    SELECT
      *
    FROM
      (
        SELECT
          coalesce(json_agg(row_to_json("%4_rows")), '[]') AS "rows"
        FROM
          (
            SELECT
              "%0_Artist"."Name" AS "Name"
            FROM
              "public"."Artist" AS "%0_Artist"
              LEFT OUTER JOIN LATERAL (
                SELECT
                  count("%1_ORDER_PART_Album"."AlbumId") AS "AlbumId"
                FROM
                  (
                    SELECT
                      "%1_ORDER_PART_Album"."AlbumId" AS "AlbumId"
                    FROM
                      "public"."Album" AS "%1_ORDER_PART_Album"
                    WHERE
                      (
                        "%0_Artist"."ArtistId" = "%1_ORDER_PART_Album"."ArtistId"
                      )
                  ) AS "%1_ORDER_PART_Album"
              ) AS "%2_ORDER_FOR_Artist" ON ('true')
            ORDER BY
              "%2_ORDER_FOR_Artist"."AlbumId" DESC
            LIMIT
              3
          ) AS "%4_rows"
      ) AS "%4_rows"
  ) AS "%3_universe";

{}
