crates/query-engine/translation/tests/snapshots/tests__sorting_by_no_relationship_aggregate.snap
---
source: crates/query-engine/translation/tests/tests.rs
expression: "format!(\"{result:?}\")"
---
Err(NotSupported("Cannot order by aggregation function 'impossible' on the same table"))
