crates/query-engine/translation/tests/snapshots/tests__sorting_by_recursive_relationship_column.snap
---
source: crates/query-engine/translation/tests/tests.rs
expression: result
---
SET
  TRANSACTION ISOLATION LEVEL READ COMMITTED;

SET
  TRANSACTION READ ONLY;

SELECT
  coalesce(json_agg(row_to_json("%4_universe")), '[]') AS "universe"
FROM
  (
    SELECT
      *
    FROM
      (
        SELECT
          coalesce(json_agg(row_to_json("%5_rows")), '[]') AS "rows"
        FROM
          (
            SELECT
              "%0_Company"."Name" AS "Name"
            FROM
              "public"."Company" AS "%0_Company"
              LEFT OUTER JOIN LATERAL (
                SELECT
                  "%2_ORDER_PART_Person"."Name" AS "Name"
                FROM
                  (
                    SELECT
                      "%1_ORDER_PART_Person"."ParentId" AS "ParentId"
                    FROM
                      "public"."Person" AS "%1_ORDER_PART_Person"
                    WHERE
                      (
                        "%0_Company"."CEOId" = "%1_ORDER_PART_Person"."PersonId"
                      )
                  ) AS "%1_ORDER_PART_Person"
                  LEFT OUTER JOIN LATERAL (
                    SELECT
                      "%2_ORDER_PART_Person"."Name" AS "Name"
                    FROM
                      "public"."Person" AS "%2_ORDER_PART_Person"
                    WHERE
                      (
                        "%1_ORDER_PART_Person"."ParentId" = "%2_ORDER_PART_Person"."PersonId"
                      )
                  ) AS "%2_ORDER_PART_Person" ON ('true')
              ) AS "%3_ORDER_FOR_Company" ON ('true')
            ORDER BY
              "%3_ORDER_FOR_Company"."Name" ASC
          ) AS "%5_rows"
      ) AS "%5_rows"
  ) AS "%4_universe";

{}
