crates/query-engine/translation/tests/snapshots/tests__sorting_by_relationship_column.snap
---
source: crates/query-engine/translation/tests/tests.rs
expression: result
---
SET
  TRANSACTION ISOLATION LEVEL READ COMMITTED;

SET
  TRANSACTION READ ONLY;

SELECT
  coalesce(json_agg(row_to_json("%3_universe")), '[]') AS "universe"
FROM
  (
    SELECT
      *
    FROM
      (
        SELECT
          coalesce(json_agg(row_to_json("%4_rows")), '[]') AS "rows"
        FROM
          (
            SELECT
              "%0_Album"."Title" AS "Name"
            FROM
              "public"."Album" AS "%0_Album"
              LEFT OUTER JOIN LATERAL (
                SELECT
                  "%1_ORDER_PART_Artist"."Name" AS "Name"
                FROM
                  (
                    SELECT
                      "%1_ORDER_PART_Artist"."Name" AS "Name"
                    FROM
                      "public"."Artist" AS "%1_ORDER_PART_Artist"
                    WHERE
                      (
                        "%0_Album"."ArtistId" = "%1_ORDER_PART_Artist"."ArtistId"
                      )
                  ) AS "%1_ORDER_PART_Artist"
              ) AS "%2_ORDER_FOR_Album" ON ('true')
            ORDER BY
              "%2_ORDER_FOR_Album"."Name" ASC
            LIMIT
              5 OFFSET 3
          ) AS "%4_rows"
      ) AS "%4_rows"
  ) AS "%3_universe";

{}
