crates/query-engine/translation/tests/snapshots/tests__very_nested_recursive_relationship.snap
---
source: crates/query-engine/translation/tests/tests.rs
expression: result
---
SET
  TRANSACTION ISOLATION LEVEL READ COMMITTED;

SET
  TRANSACTION READ ONLY;

SELECT
  coalesce(json_agg(row_to_json("%17_universe")), '[]') AS "universe"
FROM
  (
    SELECT
      *
    FROM
      (
        SELECT
          coalesce(json_agg(row_to_json("%18_rows")), '[]') AS "rows"
        FROM
          (
            SELECT
              "%1_RELATIONSHIP_Albums"."Albums" AS "Albums"
            FROM
              "public"."Artist" AS "%0_Artist"
              LEFT OUTER JOIN LATERAL (
                SELECT
                  row_to_json("%1_RELATIONSHIP_Albums") AS "Albums"
                FROM
                  (
                    SELECT
                      *
                    FROM
                      (
                        SELECT
                          coalesce(json_agg(row_to_json("%15_rows")), '[]') AS "rows"
                        FROM
                          (
                            SELECT
                              "%3_RELATIONSHIP_Artist"."Artist" AS "Artist"
                            FROM
                              "public"."Album" AS "%2_Album"
                              LEFT OUTER JOIN LATERAL (
                                SELECT
                                  row_to_json("%3_RELATIONSHIP_Artist") AS "Artist"
                                FROM
                                  (
                                    SELECT
                                      *
                                    FROM
                                      (
                                        SELECT
                                          coalesce(json_agg(row_to_json("%13_rows")), '[]') AS "rows"
                                        FROM
                                          (
                                            SELECT
                                              "%4_Artist"."Name" AS "name",
                                              "%5_RELATIONSHIP_Albums"."Albums" AS "Albums"
                                            FROM
                                              "public"."Artist" AS "%4_Artist"
                                              LEFT OUTER JOIN LATERAL (
                                                SELECT
                                                  row_to_json("%5_RELATIONSHIP_Albums") AS "Albums"
                                                FROM
                                                  (
                                                    SELECT
                                                      *
                                                    FROM
                                                      (
                                                        SELECT
                                                          coalesce(json_agg(row_to_json("%11_rows")), '[]') AS "rows"
                                                        FROM
                                                          (
                                                            SELECT
                                                              "%7_RELATIONSHIP_Artist"."Artist" AS "Artist"
                                                            FROM
                                                              "public"."Album" AS "%6_Album"
                                                              LEFT OUTER JOIN LATERAL (
                                                                SELECT
                                                                  row_to_json("%7_RELATIONSHIP_Artist") AS "Artist"
                                                                FROM
                                                                  (
                                                                    SELECT
                                                                      *
                                                                    FROM
                                                                      (
                                                                        SELECT
                                                                          coalesce(json_agg(row_to_json("%9_rows")), '[]') AS "rows"
                                                                        FROM
                                                                          (
                                                                            SELECT
                                                                              "%8_Artist"."Name" AS "name"
                                                                            FROM
                                                                              "public"."Artist" AS "%8_Artist"
                                                                            WHERE
                                                                              ("%6_Album"."ArtistId" = "%8_Artist"."ArtistId")
                                                                          ) AS "%9_rows"
                                                                      ) AS "%9_rows"
                                                                  ) AS "%7_RELATIONSHIP_Artist"
                                                              ) AS "%7_RELATIONSHIP_Artist" ON ('true')
                                                            WHERE
                                                              ("%4_Artist"."ArtistId" = "%6_Album"."ArtistId")
                                                          ) AS "%11_rows"
                                                      ) AS "%11_rows"
                                                  ) AS "%5_RELATIONSHIP_Albums"
                                              ) AS "%5_RELATIONSHIP_Albums" ON ('true')
                                            WHERE
                                              ("%2_Album"."ArtistId" = "%4_Artist"."ArtistId")
                                          ) AS "%13_rows"
                                      ) AS "%13_rows"
                                  ) AS "%3_RELATIONSHIP_Artist"
                              ) AS "%3_RELATIONSHIP_Artist" ON ('true')
                            WHERE
                              ("%0_Artist"."ArtistId" = "%2_Album"."ArtistId")
                          ) AS "%15_rows"
                      ) AS "%15_rows"
                  ) AS "%1_RELATIONSHIP_Albums"
              ) AS "%1_RELATIONSHIP_Albums" ON ('true')
          ) AS "%18_rows"
      ) AS "%18_rows"
  ) AS "%17_universe";

{}
